<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:addStatesFromChildren="true">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/data_interval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:textSize="30sp" app:layout_constraintVertical_bias="0.414"/>

    <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/millisecs"
            android:inputType="none|numberSigned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            tools:targetApi="o"
            app:layout_constraintVertical_bias="0.555"/>

    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72"/>
    <Switch
            android:text="Allow GPS Location   "
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/switch1"
            tools:paddingTop="2dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            app:layout_constraintBottom_toTopOf="@+id/switch2" android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
            android:text="Allow WiFi Access    "
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/switch2"
            tools:paddingTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/switch1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            app:layout_constraintBottom_toTopOf="@+id/switch3" android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
            android:text="Allow Phone Info     "
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/switch3"
            tools:paddingTop="2dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp" app:layout_constraintTop_toBottomOf="@+id/switch2"
            android:layout_marginEnd="60dp" android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>

</android.support.constraint.ConstraintLayout>